// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasPathParam Error if $ref path parameter definition is not required 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "Path parameter \\"**bar**\\" must have a \`required\` that is set to \`true\`.

To fix, mark this parameter as required.",
    "path": Array [
      "paths",
      "/foo/{bar}",
      "parameters",
    ],
    "range": Object {
      "end": Object {
        "character": 42,
        "line": 5,
      },
      "start": Object {
        "character": 19,
        "line": 3,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Path parameter \\"**bar**\\" must have a \`required\` that is set to \`true\`.

To fix, mark this parameter as required.",
  },
]
`;

exports[`oasPathParam Error if duplicate path parameters with same name are used 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "The path \\"**/foo/{bar}/{bar}**\\" uses the parameter \\"**{bar}**\\" multiple times.

Path parameters must be unique.

To fix, update the path so that all parameter names are unique.",
    "path": Array [
      "paths",
      "/foo/{bar}/{bar}",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 10,
      },
      "start": Object {
        "character": 23,
        "line": 2,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "The path \\"**/foo/{bar}/{bar}**\\" uses the parameter \\"**{bar}**\\" multiple times.

Path parameters must be unique.

To fix, update the path so that all parameter names are unique.",
  },
]
`;

exports[`oasPathParam Error if no path parameter definition 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "The path \\"**/foo/{bar}**\\" uses a parameter \\"**{bar}**\\" that does not have a corresponding definition.

To fix, add a path parameter with the name \\"**bar**\\".",
    "path": Array [
      "paths",
      "/foo/{bar}",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 3,
      },
      "start": Object {
        "character": 17,
        "line": 2,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "The path \\"**/foo/{bar}**\\" uses a parameter \\"**{bar}**\\" that does not have a corresponding definition.

To fix, add a path parameter with the name \\"**bar**\\".",
  },
]
`;

exports[`oasPathParam Error if paths are functionally equivalent 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "The paths \\"**/foo/{boo}**\\" and \\"**/foo/{bar}**\\" are equivalent.

To fix, remove one of the paths or merge them together.",
    "path": Array [
      "paths",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 20,
      },
      "start": Object {
        "character": 10,
        "line": 1,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "The paths \\"**/foo/{boo}**\\" and \\"**/foo/{bar}**\\" are equivalent.

To fix, remove one of the paths or merge them together.",
  },
]
`;
